sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: value by is not a member of Int
		for (i <- getNombreValeurs()-2 by -1) {
                                               ^